tests/specs/ecosystem/clappcodes/transporter/0_1_8.test
clappcodes/transporter/0.1.8
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2724 [ERROR]: 'Deno' has no exported member named 'ServeTlsOptions'. Did you mean 'ServeOptions'?
    at file://<tmpdir>/app.ts:6:146

TS2724 [ERROR]: 'Deno' has no exported member named 'ServeTlsOptions'. Did you mean 'ServeOptions'?
  serve = (options?: Partial<Deno.ServeTlsOptions>): Deno.HttpServer =>({} as never);
                                  ~~~~~~~~~~~~~~~
    at file://<tmpdir>/app.ts:15:35

Found 2 errors.

